parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    FALSE
    FILE
    GOTO
    IN
    LABEL
    LBLOCK
    NIL
    PACKED
    RBLOCK
    READLINE
    RECORD
    REPEAT
    SET
    STRING
    TRUE
    UNTIL
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declaration_sections block DOT
Rule 2     declaration_sections -> declaration_sections declaration_section
Rule 3     declaration_sections -> empty
Rule 4     declaration_section -> uses_opt
Rule 5     declaration_section -> constant_declaration
Rule 6     declaration_section -> type_declaration
Rule 7     declaration_section -> var_declaration
Rule 8     declaration_section -> procedure_declaration
Rule 9     declaration_section -> function_declaration
Rule 10    uses_opt -> USES id_list SEMICOLON
Rule 11    uses_opt -> empty
Rule 12    id_list -> ID
Rule 13    id_list -> id_list COMMA ID
Rule 14    var_declaration -> VAR declaration_list
Rule 15    declaration_list -> declaration
Rule 16    declaration_list -> declaration_list declaration
Rule 17    declaration -> id_list COLON type_specifier SEMICOLON
Rule 18    block -> declaration_sections compound_statement
Rule 19    type_declaration -> TYPE type_list
Rule 20    type_list -> type_definition
Rule 21    type_list -> type_list type_definition
Rule 22    type_specifier -> LPAREN id_list RPAREN
Rule 23    type_definition -> ID EQUAL type_specifier SEMICOLON
Rule 24    type_specifier -> ARRAY LBRACKET expression DOTDOT expression RBRACKET OF type_specifier
Rule 25    type_specifier -> INTEGER
Rule 26    type_specifier -> BYTE
Rule 27    type_specifier -> CHAR
Rule 28    type_specifier -> ID
Rule 29    type_specifier -> BOOLEAN_LITERAL
Rule 30    type_specifier -> LONGINT
Rule 31    procedure_declarations -> procedure_declaration
Rule 32    procedure_declarations -> procedure_declarations procedure_declaration
Rule 33    procedure_declaration -> PROCEDURE ID LPAREN parameter_list RPAREN SEMICOLON block SEMICOLON
Rule 34    procedure_declaration -> PROCEDURE ID LPAREN parameter_list RPAREN SEMICOLON block DOT
Rule 35    function_declaration -> FUNCTION ID LPAREN parameter_list RPAREN COLON type_specifier SEMICOLON block SEMICOLON
Rule 36    function_call -> ID LPAREN expression_list RPAREN
Rule 37    factor -> function_call
Rule 38    parameter_list -> parameter
Rule 39    parameter_list -> parameter_list SEMICOLON parameter
Rule 40    parameter -> id_list COLON type_specifier
Rule 41    parameter -> VAR id_list COLON type_specifier
Rule 42    compound_statement -> BEGIN statement_list END
Rule 43    statement_list -> statement statement_list_tail
Rule 44    statement_list_tail -> SEMICOLON statement statement_list_tail
Rule 45    statement_list_tail -> empty
Rule 46    statement -> if_statement
Rule 47    statement -> assignment_statement
Rule 48    statement -> while_statement
Rule 49    statement -> procedure_call
Rule 50    statement -> compound_statement
Rule 51    statement -> for_statement
Rule 52    statement -> empty
Rule 53    if_statement -> IF expression THEN statement ELSE statement
Rule 54    if_statement -> IF expression THEN statement
Rule 55    for_statement -> FOR ID COLON_EQUAL expression TO expression DO statement
Rule 56    for_statement -> FOR ID COLON_EQUAL expression DOWNTO expression DO statement
Rule 57    assignment_statement -> variable COLON_EQUAL expression
Rule 58    variable -> ID
Rule 59    variable -> ID LBRACKET expression RBRACKET
Rule 60    while_statement -> WHILE expression DO statement
Rule 61    procedure_call -> ID LPAREN expression_list RPAREN
Rule 62    expression_list -> expression expression_list_tail
Rule 63    expression_list_tail -> COMMA expression expression_list_tail
Rule 64    expression_list_tail -> empty
Rule 65    expression_list -> empty
Rule 66    expression -> simple_expression relop simple_expression
Rule 67    expression -> simple_expression
Rule 68    simple_expression -> term simple_expression_tail
Rule 69    simple_expression_tail -> addop term
Rule 70    simple_expression_tail -> empty
Rule 71    addop -> PLUS
Rule 72    addop -> MINUS
Rule 73    term -> factor term_tail
Rule 74    term_tail -> mulop factor
Rule 75    term_tail -> empty
Rule 76    mulop -> TIMES
Rule 77    mulop -> DIVIDE
Rule 78    mulop -> DIV
Rule 79    expression -> expression PLUS expression
Rule 80    expression -> expression MINUS expression
Rule 81    expression -> expression TIMES expression
Rule 82    expression -> expression DIVIDE expression
Rule 83    expression -> expression MOD expression
Rule 84    factor -> LPAREN expression RPAREN
Rule 85    factor -> variable
Rule 86    factor -> NUMBER
Rule 87    factor -> STRING_LITERAL
Rule 88    relop -> LESS
Rule 89    relop -> LESS_EQUAL
Rule 90    relop -> GREAT
Rule 91    relop -> GREAT_EQUAL
Rule 92    relop -> EQUAL
Rule 93    relop -> DIFFERENT
Rule 94    empty -> <empty>
Rule 95    statement -> READLN
Rule 96    statement -> READLN LPAREN variable RPAREN
Rule 97    statement -> READLN LBRACKET variable RBRACKET
Rule 98    statement -> WRITELN LPAREN expression_list RPAREN
Rule 99    statement -> WRITE LPAREN expression_list RPAREN
Rule 100   statement -> USES ID SEMICOLON
Rule 101   constant_declaration -> CONST constant_list
Rule 102   constant_list -> constant
Rule 103   constant_list -> constant_list constant
Rule 104   constant -> ID EQUAL CHARACTER_LITERAL SEMICOLON
Rule 105   constant -> ID EQUAL NUMBER SEMICOLON
Rule 106   constant -> ID EQUAL STRING_LITERAL SEMICOLON
Rule 107   constant -> ID EQUAL BOOLEAN_LITERAL SEMICOLON
Rule 108   expression -> expression AND expression
Rule 109   expression -> expression OR expression
Rule 110   expression -> NOT expression

Terminals, with rules where they appear

AND                  : 108
ARRAY                : 24
BEGIN                : 42
BOOLEAN_LITERAL      : 29 107
BYTE                 : 26
CASE                 : 
CHAR                 : 27
CHARACTER_LITERAL    : 104
COLON                : 17 35 40 41
COLON_EQUAL          : 55 56 57
COMMA                : 13 63
CONST                : 101
DIFFERENT            : 93
DIV                  : 78
DIVIDE               : 77 82
DO                   : 55 56 60
DOT                  : 1 34
DOTDOT               : 24
DOWNTO               : 56
ELSE                 : 53
END                  : 42
EQUAL                : 23 92 104 105 106 107
FALSE                : 
FILE                 : 
FOR                  : 55 56
FUNCTION             : 35
GOTO                 : 
GREAT                : 90
GREAT_EQUAL          : 91
ID                   : 1 12 13 23 28 33 34 35 36 55 56 58 59 61 100 104 105 106 107
IF                   : 53 54
IN                   : 
INTEGER              : 25
LABEL                : 
LBLOCK               : 
LBRACKET             : 24 59 97
LESS                 : 88
LESS_EQUAL           : 89
LONGINT              : 30
LPAREN               : 22 33 34 35 36 61 84 96 98 99
MINUS                : 72 80
MOD                  : 83
NIL                  : 
NOT                  : 110
NUMBER               : 86 105
OF                   : 24
OR                   : 109
PACKED               : 
PLUS                 : 71 79
PROCEDURE            : 33 34
PROGRAM              : 1
RBLOCK               : 
RBRACKET             : 24 59 97
READLINE             : 
READLN               : 95 96 97
RECORD               : 
REPEAT               : 
RPAREN               : 22 33 34 35 36 61 84 96 98 99
SEMICOLON            : 1 10 17 23 33 33 34 35 35 39 44 100 104 105 106 107
SET                  : 
STRING               : 
STRING_LITERAL       : 87 106
THEN                 : 53 54
TIMES                : 76 81
TO                   : 55
TRUE                 : 
TYPE                 : 19
UNTIL                : 
USES                 : 10 100
VAR                  : 14 41
WHILE                : 60
WITH                 : 
WRITE                : 99
WRITELN              : 98
error                : 

Nonterminals, with rules where they appear

addop                : 69
assignment_statement : 47
block                : 1 33 34 35
compound_statement   : 18 50
constant             : 102 103
constant_declaration : 5
constant_list        : 101 103
declaration          : 15 16
declaration_list     : 14 16
declaration_section  : 2
declaration_sections : 1 2 18
empty                : 3 11 45 52 64 65 70 75
expression           : 24 24 53 54 55 55 56 56 57 59 60 62 63 79 79 80 80 81 81 82 82 83 83 84 108 108 109 109 110
expression_list      : 36 61 98 99
expression_list_tail : 62 63
factor               : 73 74
for_statement        : 51
function_call        : 37
function_declaration : 9
id_list              : 10 13 17 22 40 41
if_statement         : 46
mulop                : 74
parameter            : 38 39
parameter_list       : 33 34 35 39
procedure_call       : 49
procedure_declaration : 8 31 32
procedure_declarations : 32
program              : 0
relop                : 66
simple_expression    : 66 66 67
simple_expression_tail : 68
statement            : 43 44 53 53 54 55 56 60
statement_list       : 42
statement_list_tail  : 43 44
term                 : 68 69
term_tail            : 73
type_declaration     : 6
type_definition      : 20 21
type_list            : 19 21
type_specifier       : 17 23 24 35 40 41
uses_opt             : 4
var_declaration      : 7
variable             : 57 85 96 97
while_statement      : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declaration_sections block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declaration_sections block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declaration_sections block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declaration_sections block DOT
    (2) declaration_sections -> . declaration_sections declaration_section
    (3) declaration_sections -> . empty
    (94) empty -> .

    USES            reduce using rule 94 (empty -> .)
    CONST           reduce using rule 94 (empty -> .)
    TYPE            reduce using rule 94 (empty -> .)
    VAR             reduce using rule 94 (empty -> .)
    PROCEDURE       reduce using rule 94 (empty -> .)
    FUNCTION        reduce using rule 94 (empty -> .)
    BEGIN           reduce using rule 94 (empty -> .)

    declaration_sections           shift and go to state 5
    empty                          shift and go to state 6

state 5

    (1) program -> PROGRAM ID SEMICOLON declaration_sections . block DOT
    (2) declaration_sections -> declaration_sections . declaration_section
    (18) block -> . declaration_sections compound_statement
    (4) declaration_section -> . uses_opt
    (5) declaration_section -> . constant_declaration
    (6) declaration_section -> . type_declaration
    (7) declaration_section -> . var_declaration
    (8) declaration_section -> . procedure_declaration
    (9) declaration_section -> . function_declaration
    (2) declaration_sections -> . declaration_sections declaration_section
    (3) declaration_sections -> . empty
    (10) uses_opt -> . USES id_list SEMICOLON
    (11) uses_opt -> . empty
    (101) constant_declaration -> . CONST constant_list
    (19) type_declaration -> . TYPE type_list
    (14) var_declaration -> . VAR declaration_list
    (33) procedure_declaration -> . PROCEDURE ID LPAREN parameter_list RPAREN SEMICOLON block SEMICOLON
    (34) procedure_declaration -> . PROCEDURE ID LPAREN parameter_list RPAREN SEMICOLON block DOT
    (35) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN COLON type_specifier SEMICOLON block SEMICOLON
    (94) empty -> .

  ! shift/reduce conflict for USES resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
    USES            shift and go to state 17
    CONST           shift and go to state 18
    TYPE            shift and go to state 19
    VAR             shift and go to state 20
    PROCEDURE       shift and go to state 21
    FUNCTION        shift and go to state 22
    BEGIN           reduce using rule 94 (empty -> .)

  ! USES            [ reduce using rule 94 (empty -> .) ]
  ! CONST           [ reduce using rule 94 (empty -> .) ]
  ! TYPE            [ reduce using rule 94 (empty -> .) ]
  ! VAR             [ reduce using rule 94 (empty -> .) ]
  ! PROCEDURE       [ reduce using rule 94 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 94 (empty -> .) ]

    declaration_sections           shift and go to state 7
    block                          shift and go to state 8
    declaration_section            shift and go to state 9
    uses_opt                       shift and go to state 10
    constant_declaration           shift and go to state 11
    type_declaration               shift and go to state 12
    var_declaration                shift and go to state 13
    procedure_declaration          shift and go to state 14
    function_declaration           shift and go to state 15
    empty                          shift and go to state 16

state 6

    (3) declaration_sections -> empty .

    USES            reduce using rule 3 (declaration_sections -> empty .)
    CONST           reduce using rule 3 (declaration_sections -> empty .)
    TYPE            reduce using rule 3 (declaration_sections -> empty .)
    VAR             reduce using rule 3 (declaration_sections -> empty .)
    PROCEDURE       reduce using rule 3 (declaration_sections -> empty .)
    FUNCTION        reduce using rule 3 (declaration_sections -> empty .)
    BEGIN           reduce using rule 3 (declaration_sections -> empty .)


state 7

    (18) block -> declaration_sections . compound_statement
    (2) declaration_sections -> declaration_sections . declaration_section
    (42) compound_statement -> . BEGIN statement_list END
    (4) declaration_section -> . uses_opt
    (5) declaration_section -> . constant_declaration
    (6) declaration_section -> . type_declaration
    (7) declaration_section -> . var_declaration
    (8) declaration_section -> . procedure_declaration
    (9) declaration_section -> . function_declaration
    (10) uses_opt -> . USES id_list SEMICOLON
    (11) uses_opt -> . empty
    (101) constant_declaration -> . CONST constant_list
    (19) type_declaration -> . TYPE type_list
    (14) var_declaration -> . VAR declaration_list
    (33) procedure_declaration -> . PROCEDURE ID LPAREN parameter_list RPAREN SEMICOLON block SEMICOLON
    (34) procedure_declaration -> . PROCEDURE ID LPAREN parameter_list RPAREN SEMICOLON block DOT
    (35) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN COLON type_specifier SEMICOLON block SEMICOLON
    (94) empty -> .

  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for USES resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
    BEGIN           shift and go to state 24
    USES            shift and go to state 17
    CONST           shift and go to state 18
    TYPE            shift and go to state 19
    VAR             shift and go to state 20
    PROCEDURE       shift and go to state 21
    FUNCTION        shift and go to state 22

  ! BEGIN           [ reduce using rule 94 (empty -> .) ]
  ! USES            [ reduce using rule 94 (empty -> .) ]
  ! CONST           [ reduce using rule 94 (empty -> .) ]
  ! TYPE            [ reduce using rule 94 (empty -> .) ]
  ! VAR             [ reduce using rule 94 (empty -> .) ]
  ! PROCEDURE       [ reduce using rule 94 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 94 (empty -> .) ]

    compound_statement             shift and go to state 23
    declaration_section            shift and go to state 9
    uses_opt                       shift and go to state 10
    constant_declaration           shift and go to state 11
    type_declaration               shift and go to state 12
    var_declaration                shift and go to state 13
    procedure_declaration          shift and go to state 14
    function_declaration           shift and go to state 15
    empty                          shift and go to state 25

state 8

    (1) program -> PROGRAM ID SEMICOLON declaration_sections block . DOT

    DOT             shift and go to state 26


state 9

    (2) declaration_sections -> declaration_sections declaration_section .

    USES            reduce using rule 2 (declaration_sections -> declaration_sections declaration_section .)
    CONST           reduce using rule 2 (declaration_sections -> declaration_sections declaration_section .)
    TYPE            reduce using rule 2 (declaration_sections -> declaration_sections declaration_section .)
    VAR             reduce using rule 2 (declaration_sections -> declaration_sections declaration_section .)
    PROCEDURE       reduce using rule 2 (declaration_sections -> declaration_sections declaration_section .)
    FUNCTION        reduce using rule 2 (declaration_sections -> declaration_sections declaration_section .)
    BEGIN           reduce using rule 2 (declaration_sections -> declaration_sections declaration_section .)


state 10

    (4) declaration_section -> uses_opt .

    USES            reduce using rule 4 (declaration_section -> uses_opt .)
    CONST           reduce using rule 4 (declaration_section -> uses_opt .)
    TYPE            reduce using rule 4 (declaration_section -> uses_opt .)
    VAR             reduce using rule 4 (declaration_section -> uses_opt .)
    PROCEDURE       reduce using rule 4 (declaration_section -> uses_opt .)
    FUNCTION        reduce using rule 4 (declaration_section -> uses_opt .)
    BEGIN           reduce using rule 4 (declaration_section -> uses_opt .)


state 11

    (5) declaration_section -> constant_declaration .

    USES            reduce using rule 5 (declaration_section -> constant_declaration .)
    CONST           reduce using rule 5 (declaration_section -> constant_declaration .)
    TYPE            reduce using rule 5 (declaration_section -> constant_declaration .)
    VAR             reduce using rule 5 (declaration_section -> constant_declaration .)
    PROCEDURE       reduce using rule 5 (declaration_section -> constant_declaration .)
    FUNCTION        reduce using rule 5 (declaration_section -> constant_declaration .)
    BEGIN           reduce using rule 5 (declaration_section -> constant_declaration .)


state 12

    (6) declaration_section -> type_declaration .

    USES            reduce using rule 6 (declaration_section -> type_declaration .)
    CONST           reduce using rule 6 (declaration_section -> type_declaration .)
    TYPE            reduce using rule 6 (declaration_section -> type_declaration .)
    VAR             reduce using rule 6 (declaration_section -> type_declaration .)
    PROCEDURE       reduce using rule 6 (declaration_section -> type_declaration .)
    FUNCTION        reduce using rule 6 (declaration_section -> type_declaration .)
    BEGIN           reduce using rule 6 (declaration_section -> type_declaration .)


state 13

    (7) declaration_section -> var_declaration .

    USES            reduce using rule 7 (declaration_section -> var_declaration .)
    CONST           reduce using rule 7 (declaration_section -> var_declaration .)
    TYPE            reduce using rule 7 (declaration_section -> var_declaration .)
    VAR             reduce using rule 7 (declaration_section -> var_declaration .)
    PROCEDURE       reduce using rule 7 (declaration_section -> var_declaration .)
    FUNCTION        reduce using rule 7 (declaration_section -> var_declaration .)
    BEGIN           reduce using rule 7 (declaration_section -> var_declaration .)


state 14

    (8) declaration_section -> procedure_declaration .

    USES            reduce using rule 8 (declaration_section -> procedure_declaration .)
    CONST           reduce using rule 8 (declaration_section -> procedure_declaration .)
    TYPE            reduce using rule 8 (declaration_section -> procedure_declaration .)
    VAR             reduce using rule 8 (declaration_section -> procedure_declaration .)
    PROCEDURE       reduce using rule 8 (declaration_section -> procedure_declaration .)
    FUNCTION        reduce using rule 8 (declaration_section -> procedure_declaration .)
    BEGIN           reduce using rule 8 (declaration_section -> procedure_declaration .)


state 15

    (9) declaration_section -> function_declaration .

    USES            reduce using rule 9 (declaration_section -> function_declaration .)
    CONST           reduce using rule 9 (declaration_section -> function_declaration .)
    TYPE            reduce using rule 9 (declaration_section -> function_declaration .)
    VAR             reduce using rule 9 (declaration_section -> function_declaration .)
    PROCEDURE       reduce using rule 9 (declaration_section -> function_declaration .)
    FUNCTION        reduce using rule 9 (declaration_section -> function_declaration .)
    BEGIN           reduce using rule 9 (declaration_section -> function_declaration .)


state 16

    (3) declaration_sections -> empty .
    (11) uses_opt -> empty .

  ! reduce/reduce conflict for USES resolved using rule 3 (declaration_sections -> empty .)
  ! reduce/reduce conflict for CONST resolved using rule 3 (declaration_sections -> empty .)
  ! reduce/reduce conflict for TYPE resolved using rule 3 (declaration_sections -> empty .)
  ! reduce/reduce conflict for VAR resolved using rule 3 (declaration_sections -> empty .)
  ! reduce/reduce conflict for PROCEDURE resolved using rule 3 (declaration_sections -> empty .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 3 (declaration_sections -> empty .)
  ! reduce/reduce conflict for BEGIN resolved using rule 3 (declaration_sections -> empty .)
    BEGIN           reduce using rule 3 (declaration_sections -> empty .)
    USES            reduce using rule 3 (declaration_sections -> empty .)
    CONST           reduce using rule 3 (declaration_sections -> empty .)
    TYPE            reduce using rule 3 (declaration_sections -> empty .)
    VAR             reduce using rule 3 (declaration_sections -> empty .)
    PROCEDURE       reduce using rule 3 (declaration_sections -> empty .)
    FUNCTION        reduce using rule 3 (declaration_sections -> empty .)

  ! USES            [ reduce using rule 11 (uses_opt -> empty .) ]
  ! CONST           [ reduce using rule 11 (uses_opt -> empty .) ]
  ! TYPE            [ reduce using rule 11 (uses_opt -> empty .) ]
  ! VAR             [ reduce using rule 11 (uses_opt -> empty .) ]
  ! PROCEDURE       [ reduce using rule 11 (uses_opt -> empty .) ]
  ! FUNCTION        [ reduce using rule 11 (uses_opt -> empty .) ]
  ! BEGIN           [ reduce using rule 11 (uses_opt -> empty .) ]


state 17

    (10) uses_opt -> USES . id_list SEMICOLON
    (12) id_list -> . ID
    (13) id_list -> . id_list COMMA ID

    ID              shift and go to state 28

    id_list                        shift and go to state 27

state 18

    (101) constant_declaration -> CONST . constant_list
    (102) constant_list -> . constant
    (103) constant_list -> . constant_list constant
    (104) constant -> . ID EQUAL CHARACTER_LITERAL SEMICOLON
    (105) constant -> . ID EQUAL NUMBER SEMICOLON
    (106) constant -> . ID EQUAL STRING_LITERAL SEMICOLON
    (107) constant -> . ID EQUAL BOOLEAN_LITERAL SEMICOLON

    ID              shift and go to state 31

    constant_list                  shift and go to state 29
    constant                       shift and go to state 30

state 19

    (19) type_declaration -> TYPE . type_list
    (20) type_list -> . type_definition
    (21) type_list -> . type_list type_definition
    (23) type_definition -> . ID EQUAL type_specifier SEMICOLON

    ID              shift and go to state 34

    type_list                      shift and go to state 32
    type_definition                shift and go to state 33

state 20

    (14) var_declaration -> VAR . declaration_list
    (15) declaration_list -> . declaration
    (16) declaration_list -> . declaration_list declaration
    (17) declaration -> . id_list COLON type_specifier SEMICOLON
    (12) id_list -> . ID
    (13) id_list -> . id_list COMMA ID

    ID              shift and go to state 28

    declaration_list               shift and go to state 35
    declaration                    shift and go to state 36
    id_list                        shift and go to state 37

state 21

    (33) procedure_declaration -> PROCEDURE . ID LPAREN parameter_list RPAREN SEMICOLON block SEMICOLON
    (34) procedure_declaration -> PROCEDURE . ID LPAREN parameter_list RPAREN SEMICOLON block DOT

    ID              shift and go to state 38


state 22

    (35) function_declaration -> FUNCTION . ID LPAREN parameter_list RPAREN COLON type_specifier SEMICOLON block SEMICOLON

    ID              shift and go to state 39


state 23

    (18) block -> declaration_sections compound_statement .

    DOT             reduce using rule 18 (block -> declaration_sections compound_statement .)
    SEMICOLON       reduce using rule 18 (block -> declaration_sections compound_statement .)


state 24

    (42) compound_statement -> BEGIN . statement_list END
    (43) statement_list -> . statement statement_list_tail
    (46) statement -> . if_statement
    (47) statement -> . assignment_statement
    (48) statement -> . while_statement
    (49) statement -> . procedure_call
    (50) statement -> . compound_statement
    (51) statement -> . for_statement
    (52) statement -> . empty
    (95) statement -> . READLN
    (96) statement -> . READLN LPAREN variable RPAREN
    (97) statement -> . READLN LBRACKET variable RBRACKET
    (98) statement -> . WRITELN LPAREN expression_list RPAREN
    (99) statement -> . WRITE LPAREN expression_list RPAREN
    (100) statement -> . USES ID SEMICOLON
    (53) if_statement -> . IF expression THEN statement ELSE statement
    (54) if_statement -> . IF expression THEN statement
    (57) assignment_statement -> . variable COLON_EQUAL expression
    (60) while_statement -> . WHILE expression DO statement
    (61) procedure_call -> . ID LPAREN expression_list RPAREN
    (42) compound_statement -> . BEGIN statement_list END
    (55) for_statement -> . FOR ID COLON_EQUAL expression TO expression DO statement
    (56) for_statement -> . FOR ID COLON_EQUAL expression DOWNTO expression DO statement
    (94) empty -> .
    (58) variable -> . ID
    (59) variable -> . ID LBRACKET expression RBRACKET

    READLN          shift and go to state 49
    WRITELN         shift and go to state 51
    WRITE           shift and go to state 52
    USES            shift and go to state 53
    IF              shift and go to state 55
    WHILE           shift and go to state 56
    ID              shift and go to state 54
    BEGIN           shift and go to state 24
    FOR             shift and go to state 57
    SEMICOLON       reduce using rule 94 (empty -> .)
    END             reduce using rule 94 (empty -> .)

    statement_list                 shift and go to state 40
    statement                      shift and go to state 41
    if_statement                   shift and go to state 42
    assignment_statement           shift and go to state 43
    while_statement                shift and go to state 44
    procedure_call                 shift and go to state 45
    compound_statement             shift and go to state 46
    for_statement                  shift and go to state 47
    empty                          shift and go to state 48
    variable                       shift and go to state 50

state 25

    (11) uses_opt -> empty .

    BEGIN           reduce using rule 11 (uses_opt -> empty .)
    USES            reduce using rule 11 (uses_opt -> empty .)
    CONST           reduce using rule 11 (uses_opt -> empty .)
    TYPE            reduce using rule 11 (uses_opt -> empty .)
    VAR             reduce using rule 11 (uses_opt -> empty .)
    PROCEDURE       reduce using rule 11 (uses_opt -> empty .)
    FUNCTION        reduce using rule 11 (uses_opt -> empty .)


state 26

    (1) program -> PROGRAM ID SEMICOLON declaration_sections block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declaration_sections block DOT .)


state 27

    (10) uses_opt -> USES id_list . SEMICOLON
    (13) id_list -> id_list . COMMA ID

    SEMICOLON       shift and go to state 58
    COMMA           shift and go to state 59


state 28

    (12) id_list -> ID .

    SEMICOLON       reduce using rule 12 (id_list -> ID .)
    COMMA           reduce using rule 12 (id_list -> ID .)
    COLON           reduce using rule 12 (id_list -> ID .)
    RPAREN          reduce using rule 12 (id_list -> ID .)


state 29

    (101) constant_declaration -> CONST constant_list .
    (103) constant_list -> constant_list . constant
    (104) constant -> . ID EQUAL CHARACTER_LITERAL SEMICOLON
    (105) constant -> . ID EQUAL NUMBER SEMICOLON
    (106) constant -> . ID EQUAL STRING_LITERAL SEMICOLON
    (107) constant -> . ID EQUAL BOOLEAN_LITERAL SEMICOLON

    USES            reduce using rule 101 (constant_declaration -> CONST constant_list .)
    CONST           reduce using rule 101 (constant_declaration -> CONST constant_list .)
    TYPE            reduce using rule 101 (constant_declaration -> CONST constant_list .)
    VAR             reduce using rule 101 (constant_declaration -> CONST constant_list .)
    PROCEDURE       reduce using rule 101 (constant_declaration -> CONST constant_list .)
    FUNCTION        reduce using rule 101 (constant_declaration -> CONST constant_list .)
    BEGIN           reduce using rule 101 (constant_declaration -> CONST constant_list .)
    ID              shift and go to state 31

    constant                       shift and go to state 60

state 30

    (102) constant_list -> constant .

    ID              reduce using rule 102 (constant_list -> constant .)
    USES            reduce using rule 102 (constant_list -> constant .)
    CONST           reduce using rule 102 (constant_list -> constant .)
    TYPE            reduce using rule 102 (constant_list -> constant .)
    VAR             reduce using rule 102 (constant_list -> constant .)
    PROCEDURE       reduce using rule 102 (constant_list -> constant .)
    FUNCTION        reduce using rule 102 (constant_list -> constant .)
    BEGIN           reduce using rule 102 (constant_list -> constant .)


state 31

    (104) constant -> ID . EQUAL CHARACTER_LITERAL SEMICOLON
    (105) constant -> ID . EQUAL NUMBER SEMICOLON
    (106) constant -> ID . EQUAL STRING_LITERAL SEMICOLON
    (107) constant -> ID . EQUAL BOOLEAN_LITERAL SEMICOLON

    EQUAL           shift and go to state 61


state 32

    (19) type_declaration -> TYPE type_list .
    (21) type_list -> type_list . type_definition
    (23) type_definition -> . ID EQUAL type_specifier SEMICOLON

    USES            reduce using rule 19 (type_declaration -> TYPE type_list .)
    CONST           reduce using rule 19 (type_declaration -> TYPE type_list .)
    TYPE            reduce using rule 19 (type_declaration -> TYPE type_list .)
    VAR             reduce using rule 19 (type_declaration -> TYPE type_list .)
    PROCEDURE       reduce using rule 19 (type_declaration -> TYPE type_list .)
    FUNCTION        reduce using rule 19 (type_declaration -> TYPE type_list .)
    BEGIN           reduce using rule 19 (type_declaration -> TYPE type_list .)
    ID              shift and go to state 34

    type_definition                shift and go to state 62

state 33

    (20) type_list -> type_definition .

    ID              reduce using rule 20 (type_list -> type_definition .)
    USES            reduce using rule 20 (type_list -> type_definition .)
    CONST           reduce using rule 20 (type_list -> type_definition .)
    TYPE            reduce using rule 20 (type_list -> type_definition .)
    VAR             reduce using rule 20 (type_list -> type_definition .)
    PROCEDURE       reduce using rule 20 (type_list -> type_definition .)
    FUNCTION        reduce using rule 20 (type_list -> type_definition .)
    BEGIN           reduce using rule 20 (type_list -> type_definition .)


state 34

    (23) type_definition -> ID . EQUAL type_specifier SEMICOLON

    EQUAL           shift and go to state 63


state 35

    (14) var_declaration -> VAR declaration_list .
    (16) declaration_list -> declaration_list . declaration
    (17) declaration -> . id_list COLON type_specifier SEMICOLON
    (12) id_list -> . ID
    (13) id_list -> . id_list COMMA ID

    USES            reduce using rule 14 (var_declaration -> VAR declaration_list .)
    CONST           reduce using rule 14 (var_declaration -> VAR declaration_list .)
    TYPE            reduce using rule 14 (var_declaration -> VAR declaration_list .)
    VAR             reduce using rule 14 (var_declaration -> VAR declaration_list .)
    PROCEDURE       reduce using rule 14 (var_declaration -> VAR declaration_list .)
    FUNCTION        reduce using rule 14 (var_declaration -> VAR declaration_list .)
    BEGIN           reduce using rule 14 (var_declaration -> VAR declaration_list .)
    ID              shift and go to state 28

    declaration                    shift and go to state 64
    id_list                        shift and go to state 37

state 36

    (15) declaration_list -> declaration .

    ID              reduce using rule 15 (declaration_list -> declaration .)
    USES            reduce using rule 15 (declaration_list -> declaration .)
    CONST           reduce using rule 15 (declaration_list -> declaration .)
    TYPE            reduce using rule 15 (declaration_list -> declaration .)
    VAR             reduce using rule 15 (declaration_list -> declaration .)
    PROCEDURE       reduce using rule 15 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 15 (declaration_list -> declaration .)
    BEGIN           reduce using rule 15 (declaration_list -> declaration .)


state 37

    (17) declaration -> id_list . COLON type_specifier SEMICOLON
    (13) id_list -> id_list . COMMA ID

    COLON           shift and go to state 65
    COMMA           shift and go to state 59


state 38

    (33) procedure_declaration -> PROCEDURE ID . LPAREN parameter_list RPAREN SEMICOLON block SEMICOLON
    (34) procedure_declaration -> PROCEDURE ID . LPAREN parameter_list RPAREN SEMICOLON block DOT

    LPAREN          shift and go to state 66


state 39

    (35) function_declaration -> FUNCTION ID . LPAREN parameter_list RPAREN COLON type_specifier SEMICOLON block SEMICOLON

    LPAREN          shift and go to state 67


state 40

    (42) compound_statement -> BEGIN statement_list . END

    END             shift and go to state 68


state 41

    (43) statement_list -> statement . statement_list_tail
    (44) statement_list_tail -> . SEMICOLON statement statement_list_tail
    (45) statement_list_tail -> . empty
    (94) empty -> .

    SEMICOLON       shift and go to state 70
    END             reduce using rule 94 (empty -> .)

    statement_list_tail            shift and go to state 69
    empty                          shift and go to state 71

state 42

    (46) statement -> if_statement .

    SEMICOLON       reduce using rule 46 (statement -> if_statement .)
    END             reduce using rule 46 (statement -> if_statement .)
    ELSE            reduce using rule 46 (statement -> if_statement .)


state 43

    (47) statement -> assignment_statement .

    SEMICOLON       reduce using rule 47 (statement -> assignment_statement .)
    END             reduce using rule 47 (statement -> assignment_statement .)
    ELSE            reduce using rule 47 (statement -> assignment_statement .)


state 44

    (48) statement -> while_statement .

    SEMICOLON       reduce using rule 48 (statement -> while_statement .)
    END             reduce using rule 48 (statement -> while_statement .)
    ELSE            reduce using rule 48 (statement -> while_statement .)


state 45

    (49) statement -> procedure_call .
